k8s/jenkins/kubernetes-jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - jenkins.changyan.co
  #     secretName: jenkins-changyan-tls
  rules:
    - host: jenkins.pttech.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-svc
                port:
                  number: 8080
