k8s/jenkins/kubernetes-jenkins/jenkins_svc_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-pttech-ingress
  namespace: devops
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.pttech.cc
    secretName: jenkins-pttech-tls
  rules:
  - host: jenkins.pttech.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
